
2009-07-39 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinInv.cpp, iKinIpOpt.cpp: SE3inv() used instead of pinv()

2009-07-08 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinFwd.cpp: kinematic fix on the right leg

2009-07-04 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinInv.h,.cpp: MultiRefDynCtrl renamed in MultiRefMinJerkCtrl

2009-06-25 Ugo Pattacini <ugo.pattacini@iit.it>
	   * All modules: "using namespace" removed from within header files

2009-06-22 Ugo Pattacini <ugo.pattacini@iit.it>
       * iKinSlv.h,.cpp:
         PING and QUIT commands added to CartesianSolver class

2009-06-20 Ugo Pattacini <ugo.pattacini@iit.it>
       * iKinSlv.h,.cpp:
         new classes added for on-line solvers
       * example_01 added within tutorials directory

2009-06-04 Ugo Pattacini <ugo.pattacini@iit.it>
       * iKinIpOpt.h:
         added getTranslationalTol() to iKinIpOptMin class
         added update() to iKinLinIneqConstr class

2009-06-03 Ugo Pattacini <ugo.pattacini@iit.it>
       * iKinFwd.h: isBlocked() method of iKinLink class made public.
	   * iKinIpOpt.cpp,.h: added default constructor for iKinLinIneqConstr class.
         Rationale: constructor with default parameters caused compilation error
         for inherited classes under Linux platforms.

2009-06-01 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinInv.cpp,.h,iKinIpOpt.cpp,.h: IKINCTRL_POSE_ALL became IKINCTRL_POSE_FULL
         since it's more meaningfull

2009-05-29 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinInv.cpp,.h: set_execTime() updated with dump of warning message

2009-05-20 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinInv.cpp,.h: weight shaping changed in MultiRefDynCtrl class

2009-04-27 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinFwd.h: asChain() method changed; now it returns a pointer
       * iKinLinIneqConstr class constructor update

2009-04-21 Ugo Pattacini <ugo.pattacini@iit.it>
	   * Added possibility to change translational tolerance for IPOPT solver