@@ -5,6 +5,7 @@
 #include <iostream>
 #include <iomanip>
 
+#include <iCub/iKinVocabs.h>
 #include <iCub/iKinSlv.h>
 
 #define RES_EVENT(x)            (static_cast<ACE_Auto_Event*>(x))
@@ -19,7 +20,9 @@ namespace iKin
 
 using namespace std;
 using namespace yarp;
+using namespace yarp::os;
 using namespace yarp::sig;
+using namespace yarp::dev;
 using namespace yarp::math;
 using namespace iKin;
 
@@ -1213,79 +1216,6 @@ void CartesianSolver::run()
         if (verbosity)
             printInfo(xd,x,q,t1-t0);
     }    
-}
-
-
-/************************************************************************/
-void CartesianSolver::addVectorOption(Bottle &b, const int vcb, const Vector &v)
-{
-    Bottle &part=b.addList();
-    part.addVocab(vcb);
-    Bottle &vect=part.addList();
-
-    for (int i=0; i<v.length(); i++)
-        vect.addDouble(v[i]);
-}
-
-
-/************************************************************************/
-void CartesianSolver::addTargetOption(Bottle &b, const Vector &xd)
-{
-    addVectorOption(b,IKINSLV_VOCAB_OPT_XD,xd);
-}
-
-
-/************************************************************************/
-void CartesianSolver::addDOFOption(Bottle &b, const Vector &dof)
-{
-    addVectorOption(b,IKINSLV_VOCAB_OPT_DOF,dof);
-}
-
-
-/************************************************************************/
-void CartesianSolver::addPoseOption(Bottle &b, const unsigned int pose)
-{
-    Bottle &posePart=b.addList();
-    posePart.addVocab(IKINSLV_VOCAB_OPT_POSE);
-
-    if (pose==IKINCTRL_POSE_FULL)
-        posePart.addVocab(IKINSLV_VOCAB_VAL_POSE_FULL);
-    else if (pose==IKINCTRL_POSE_XYZ)
-        posePart.addVocab(IKINSLV_VOCAB_VAL_POSE_XYZ);
-}
-
-
-/************************************************************************/
-void CartesianSolver::addModeOption(Bottle &b, const bool tracking)
-{
-    Bottle &modePart=b.addList();
-    modePart.addVocab(IKINSLV_VOCAB_OPT_MODE);
-
-    if (tracking)
-        modePart.addVocab(IKINSLV_VOCAB_VAL_MODE_TRACK);
-    else
-        modePart.addVocab(IKINSLV_VOCAB_VAL_MODE_SINGLE);
-}
-
-
-/************************************************************************/
-Bottle *CartesianSolver::getTargetOption(Bottle &b)
-{
-    return b.find(Vocab::decode(IKINSLV_VOCAB_OPT_XD)).asList();
-}
-
-
-/************************************************************************/
-Bottle *CartesianSolver::getEndEffectorPoseOption(Bottle &b)
-{
-    return b.find(Vocab::decode(IKINSLV_VOCAB_OPT_X)).asList();
-}
-
-
-/************************************************************************/
-Bottle *CartesianSolver::getJointsOption(Bottle &b)
-{
-    return b.find(Vocab::decode(IKINSLV_VOCAB_OPT_Q)).asList();
 }
 
 
