@@ -1,5 +1,8 @@
 
-2009-07-39 Ugo Pattacini <ugo.pattacini@iit.it>
+2009-10-12 Ugo Pattacini <ugo.pattacini@iit.it>
+	   * iKinHlp.cpp, iKinHlp.h, iKinVocabs.h: files added
+
+2009-07-29 Ugo Pattacini <ugo.pattacini@iit.it>
 	   * iKinInv.cpp, iKinIpOpt.cpp: SE3inv() used instead of pinv()
 
 2009-07-08 Ugo Pattacini <ugo.pattacini@iit.it>
